--- a/index.html
+++ b/index.html
@@ -4,49 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BALMIKI PROJECT</title>
+    <title>balmiki </title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="main">
-        <div id="left-top-left">
-            <div id="square"></div>
+        <div id="nav">
+            <h4>About</h4>
+            <h4>News</h4>
+            <h4>Cart</h4>
+            <i class="ri-shopping-bag-line"></i>
         </div>
-        <div id="left-top-right">
-            <h4>menu</h4>
-            <h5>home page</h5>
-            <h5>portfolio</h5>
-            <h5>fassion week -02025</h5>
-            <h5>News/Articals</h5>
-            <h5>contact</h5>
-        </div>
-        <div id="left-center">
-            <h1>SELECT</h1>
-            <h1>FACTION</h1>
-            <h1>MODE.05-</h1>
-            <h1>SCEAN<h1>
+
+        <div id="center">
+            <h1>confidence is key,<br> always be happy with <br>your family and friend.</h1>
 
         </div>
-        <div id="left-bottom">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Fugit molestias numquam officia doloremque. Eius fugit fugiat quo modi debitis
-                voluptatibus animi libero cupiditate, consequatur obcaecati autem laborum molestias repellat laudantium.
 
+        <div id="center-in">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum nemo magni molestiae, <br> aspernatur
+                recusandae quam sequi eaque explicabo enim nihil minima quibusdam<br> quaerat labore! Repellat culpa
+                dolorem assumenda et neque aut nisi reiciendis tenetur nemo<br> iure, deserunt facere optio qui!ipsum
+                dolor sit, amet consectetur adipisicing elit. Quas et vel similique? .
             </p>
-        </div>
-        <div id="right">
-            <video autoplay loop muted src="video.mp4"> </video>
+            <div id="right">
+                <div class="elem">
+                    <a href="#">add to card</a>
+                    <i class="ri-arrow-right-up-line"></i>
+                </div>
+                <div class="elem">
+                    <a href="#">product details</a>
+                    <i class="ri-arrow-right-up-line"></i>
+                </div>
+                <div class="elem">
+                    <a href="#">shipping</a>
+                    <i class="ri-arrow-right-up-line"></i>
 
 
-
-            <div id="container">
-
-                <i class="ri-arrow-right-line"></i>
+                </div>
 
             </div>
 
-            <body>
+
+        </div>
+    </div>
+</body>
 
 </html>
